[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "autopep695"
readme = "README.md"
description = "Automatically upgrade to the new type syntax introduced in PEP 695 using a single command"
requires-python = ">=3.9"
authors = [{name = "yowoda", email = "yodarlswitch@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "libcst>=1.4.0",
    "colorama>=0.4.6, <1",
    "typing-extensions>=4.12.2, <5"
]

[project.urls]
Homepage = "https://github.com/yowoda/autopep695"
Repository = "https://github.com/yowoda/autopep695"

[project.scripts]
autopep695 = "autopep695.cli:main"

[project.optional-dependencies]
dev = ["nox==2024.4.15"]
"dev.format" = ["ruff>=0.6.3, <0.7"]
"dev.typecheck" =  ["pyright==1.1.381"]
"dev.release" = ["flit==3.9.0"]
"dev.slotscheck" = ["slotscheck>=0.19.0, <1"]
"dev.test" = ["pytest>=8.3.3, <9"]
"dev.changelog" = ["towncrier==24.8.0"]

[tool.flit.module]
name = "autopep695"

[tool.uv]
dev-dependencies = [
    "nox==2024.4.15",
    "ruff>=0.6.3, <0.7",
    "pyright==1.1.381",
    "flit==3.9.0",
    "slotscheck>=0.19.0, <1",
    "pytest>=8.3.3, <9",
    "towncrier==24.8.0"
]

[tool.pyright]
include = ["autopep695"]
typeCheckingMode = "strict"

[tool.towncrier]
directory = "changes"
filename = "CHANGES.md"
package = "autopep695"
title_format = "v{version} ({project_date})"
issue_format = "[#{issue}](https://github.com/yowoda/autopep695/issues/{issue})"
orphan_prefix = "+"
type = [
    { directory = "breaking", name = "Breaking Changes", showcontent = true },
    { directory = "removal", name = "Removals", showcontent = true },
    { directory = "deprecation", name = "Deprecations", showcontent = true },
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "bugfix", name = "Bugfixes", showcontent = true },
    { directory = "doc", name = "Documentation", showcontent = true },
    { directory = "misc", name = "Miscellaneous", showcontent = true },
]